@@ -114,4 +114,5 @@ Changes:
 90. Added LanguageCodes Trait.
 91. Added Whoops custum library for show more friendly error log on display if turn on.
 92. Added Class aliases support.
+93. Added All method in Router class for supporting all requested method.
 	
